--- a/index.html
+++ b/index.html
@@ -519,7 +519,8 @@
                 <div class="card my-2 text-center">
                   <div class="card-body">
                     <img class="card-img" src="images/person1.webp" alt="">
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, quia adipisci facilis nulla, quasi id dolorem illum explicabo reprehenderit in commodi! Aliquam in maiores sit libero debitis dolorum accusamus reiciendis.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, quia adipisci facilis nulla</p>
+                    <h3 class="card-title" >Samantha Kris</h3>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -533,7 +534,8 @@
               <div class="card my-2 text-center">
                 <div class="card-body">
                   <img class="card-img" src="images/person2.webp" alt="">
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, quia adipisci facilis nulla, quasi id dolorem illum explicabo reprehenderit in commodi! Aliquam in maiores sit libero debitis dolorum accusamus reiciendis.</p>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, quia adipisci facilis nulla</p>
+                  <h3 class="card-title" >John Doe</h3>
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -547,8 +549,9 @@
             <div class="card my-2 text-center">
               <div class="card-body">
                   <img class="card-img" src="images/person3.webp" alt="">
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, quia adipisci facilis nulla, quasi id dolorem illum explicabo reprehenderit in commodi! Aliquam in maiores sit libero debitis dolorum accusamus reiciendis.</p>
-                <i class="fa-solid fa-star"></i>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, quia adipisci facilis nulla</p>
+                  <h3 class="card-title" >Marie John</h3>
+                  <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
